--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1309,6 +1309,7 @@ tr > td:first-child {
 }
 .card-container .card__boxes--box {
   min-width: 400px;
+  transition: all 0.2s ease-in-out;
 }
 @media screen and (max-width: 470px) {
   .card-container .card__boxes--box {
@@ -1345,14 +1346,14 @@ tr > td:first-child {
 }
 .card-container .card__boxes--box__content {
   display: flex;
-  align-items: start;
   font-size: 1.25rem;
   width: 100%;
   min-height: 45px;
   background-color: var(--color-on-primary);
   border-radius: 0.5rem;
-  flex-direction: column;
+  align-items: center;
   transition: all 0.5s ease-in-out;
+  padding: 0 0.5rem;
 }
 .card-container .card__boxes--box__content--fields {
   padding: 0 0.5rem;
@@ -1539,6 +1540,9 @@ tr > td:first-child {
 .zero-extend {
   transition: all 0.5s ease-in-out;
 }
+.zero-extend .btn-default {
+  opacity: 0;
+}
 .zero-extend .card {
   background-color: transparent;
   container-type: normal;
@@ -1549,6 +1553,10 @@ tr > td:first-child {
 }
 .zero-extend .card .new-class {
   grid-template-columns: repeat(1, 1fr);
+}
+
+.zero-extend:hover .btn-default {
+  opacity: 1;
 }
 
 .new-class-bg {
