--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1442,6 +1442,13 @@ tr > td:first-child {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   z-index: 10;
   overflow: visible;
+  display: flex;
+  flex-direction: column;
+}
+.local-menu-more-vert .edit-content {
+  width: 150px;
+  margin: 0.5rem;
+  font-family: "Open Sans", sans-serif;
 }
 
 .local-menu-more-vert__item {
