--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -378,3 +378,10 @@
 //     }
 //   }
 // }
+// .card__boxes--box__content--fields span {
+//   display: none;
+// }
+
+.card__boxes--box__content--fields span.not-visible {
+  display: none;
+}
