--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -52,6 +52,7 @@
 
         .sidebar-menu {
           position: fixed;
+          max-width: 500px;
           background-color: var(--color-on-primary);
           box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
             0 9px 46px 8px rgba(0, 0, 0, 0.12),
@@ -64,8 +65,6 @@
           flex-direction: column;
           gap: 1rem;
           margin-top: 0.5rem;
-          // height: 200px;
-          // width: 400px;
           display: flex;
           gap: 0.5rem;
           .group  {
@@ -155,10 +154,7 @@
             font-size: font-size(font-size-regular);
           }
         }
-        .sidebar-menu.inner {
-          right: 530px;
-          // position: relative;
-        }
+     
         &--collapse {
           display: flex;
           flex-direction: column;
@@ -227,4 +223,11 @@
 
 .btn-actions-menu {
   align-self: end;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar-menu {
+    right: 0 !important;
+    // top: 0;
+  }
 }
