--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -645,6 +645,7 @@ hr {
 }
 .side-nav__content--list__item .sidebar-menu {
   position: fixed;
+  max-width: 500px;
   background-color: var(--color-on-primary);
   box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
@@ -735,9 +736,6 @@ hr {
   align-self: flex-end;
   font-size: 1.25rem;
 }
-.side-nav__content--list__item .sidebar-menu.inner {
-  right: 530px;
-}
 .side-nav__content--list__item--collapse {
   display: flex;
   flex-direction: column;
@@ -800,6 +798,11 @@ hr {
   align-self: end;
 }
 
+@media screen and (max-width: 700px) {
+  .sidebar-menu {
+    right: 0 !important;
+  }
+}
 .navbar {
   position: fixed;
   max-width: 3000px;
