--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -238,3 +238,20 @@
 .visible {
   display: flex;
 }
+
+.reduced-groups {
+  align-self: flex-start;
+  .reduced-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: .5rem;
+  font-size: font-size(font-size-regular);
+  background-color: var(--color-blue);
+  padding: .4rem .8rem;
+  border-radius: $border-radius-medium;
+  }
+  .reduced-group:hover {
+    background-color: var(--color-blue-hover);
+  }
+}
