--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -162,7 +162,7 @@
             }
           }
           .group:not(:first-child) {
-            margin-top: .6rem;
+            margin-top: 1rem;
           }
           .expand-more {
             align-self: flex-end;
