--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -256,6 +256,11 @@
 
 .reduced-groups {
   align-self: flex-start;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin-top: 1rem;
   .reduced-group {
   display: flex;
   align-items: center;
