--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -194,7 +194,7 @@
           }
           .group.purple {
             .group-name {
-              color: #395286;
+              color: #3b4aa1;
             }
             .group-fields {
               .edit-content {
