--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -762,7 +762,7 @@ hr {
   background-color: var(--color-blue);
 }
 .side-nav__content--list__item .sidebar-menu .group.purple .group-name {
-  color: #395286;
+  color: #3b4aa1;
 }
 .side-nav__content--list__item .sidebar-menu .group.purple .group-fields .edit-content .edit-field:hover {
   background-color: #e1d6fe;
