--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -174,6 +174,9 @@
             }
             .group-fields {
               .edit-content {
+                .edit-field {
+                  border: 1px solid #d5f3dc;
+                }
                 .edit-field:hover {
                   background-color: #d5f3dc;
                 }
@@ -186,6 +189,9 @@
             }
             .group-fields {
               .edit-content {
+                .edit-field {
+                  border: 1px solid var(--color-blue);
+                }
                 .edit-field:hover {
                   background-color: var(--color-blue);
                 }
@@ -198,6 +204,9 @@
             }
             .group-fields {
               .edit-content {
+                .edit-field {
+                  border: 1px solid #e1d6fe;
+                }
                 .edit-field:hover {
                   background-color: #e1d6fe;
                 }
