--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -50,20 +50,20 @@
         }
 
         .sidebar-menu {
-          position: fixed;
-          max-width: 500px;
+          // position: fixed;
+          max-width: 450px;
           background-color: var(--color-on-primary);
-          box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
-            0 9px 46px 8px rgba(0, 0, 0, 0.12),
-            0 11px 15px -7px rgba(0, 0, 0, 0.2);
-          border-radius: 8px;
+          // box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+          //   0 9px 46px 8px rgba(0, 0, 0, 0.12),
+          //   0 11px 15px -7px rgba(0, 0, 0, 0.2);
+          // border-radius: 8px;
           padding: 10px;
-          right: 180px;
-          z-index: 100;
+          // right: 180px;
+          // z-index: 100;
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          margin-top: 0.5rem;
+          // margin-top: 0.5rem;
           display: flex;
           gap: 0.5rem;
           .group {
@@ -249,17 +249,37 @@
       &__item.create-item {
         border-radius: $border-radius-small;
         margin-bottom: 1rem;
-        padding: $padding-small $padding-medium;
+        padding: $padding-small 0;
         align-self: center;
         margin-top: 1rem;
-        background-color: var(--color-blue);
+        // background-color: var(--color-blue);
         color: var(--color-on-blue);
+        .item-name {
+          padding: 0.5rem 1rem 0 1rem;
+          a {
+            font-size: 16px;
+
+          }
+        }
       }
-      &__item.create-item:hover,
-      &__item.create-item:active {
-        // background-color: var(--color-permanent-secondary-hover);
-        background-color: var(--color-blue-hover);
-      }
+      // &__item.create-item:hover,
+      // &__item.create-item:active {
+      //   // background-color: var(--color-permanent-secondary-hover);
+      //   background-color: var(--color-blue-hover);
+      // }
+    }
+    .create-icon {
+      padding: .2rem;
+      font-size: 22px !important;
+      border: 1px solid #c9c9c9;
+      margin: 0 0.5rem;
+      color: #818181 !important;
+      border-radius: 5px;
+      transition: $transition;
+    }
+    .create-icon:hover {
+  
+      background-color: #e2e1e1;
     }
   }
   @include media-tablet-big {
