--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -796,16 +796,13 @@ hr {
 .side-nav__content--list__item.create-item {
   border-radius: 0.5rem;
   margin-bottom: 1rem;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 0 0;
   align-self: center;
   margin-top: 1rem;
   color: var(--color-on-blue);
 }
 .side-nav__content--list__item.create-item .item-name {
   padding: 0.5rem 1rem 0 1rem;
-}
-.side-nav__content--list__item.create-item .item-name a {
-  font-size: 16px;
 }
 .side-nav__content .create-icon {
   padding: 0.2rem;
