--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -50,20 +50,21 @@
         }
 
         .sidebar-menu {
-          // position: fixed;
+          position: fixed;
           max-width: 450px;
           background-color: var(--color-on-primary);
-          // box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
-          //   0 9px 46px 8px rgba(0, 0, 0, 0.12),
-          //   0 11px 15px -7px rgba(0, 0, 0, 0.2);
-          // border-radius: 8px;
+          box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+            0 9px 46px 8px rgba(0, 0, 0, 0.12),
+            0 11px 15px -7px rgba(0, 0, 0, 0.2);
+          border-radius: 8px;
           padding: 10px;
-          // right: 180px;
-          // z-index: 100;
+          right: 180px;
+          top: 120px;
+          z-index: 100;
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          // margin-top: 0.5rem;
+          margin-top: 0.5rem;
           display: flex;
           gap: 0.5rem;
           .group {
@@ -254,6 +255,7 @@
         margin-top: 1rem;
         // background-color: var(--color-blue);
         color: var(--color-on-blue);
+        padding-bottom: 1rem;
         .item-name {
           padding: 0.5rem 1rem 0 1rem;
          
