--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -643,12 +643,19 @@ hr {
   color: var(--color-on-primary-light);
 }
 .side-nav__content--list__item .sidebar-menu {
+  position: fixed;
   max-width: 450px;
   background-color: var(--color-on-primary);
+  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
   padding: 10px;
+  right: 180px;
+  top: 120px;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-top: 0.5rem;
   display: flex;
   gap: 0.5rem;
 }
@@ -800,6 +807,7 @@ hr {
   align-self: center;
   margin-top: 1rem;
   color: var(--color-on-blue);
+  padding-bottom: 1rem;
 }
 .side-nav__content--list__item.create-item .item-name {
   padding: 0.5rem 1rem 0 1rem;
