--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -14,7 +14,7 @@
   overflow-x: hidden;
   min-height: 100vh;
   max-height: min-content;
-  min-width: 250px;
+  min-width: 200px;
 
   &__content {
     &--list {
@@ -59,7 +59,6 @@
           border-radius: 8px;
           padding: 10px;
           right: 180px;
-          top: 120px;
           z-index: 100;
           display: flex;
           flex-direction: column;
@@ -251,9 +250,9 @@
         border-radius: $border-radius-small;
         margin-bottom: 1rem;
         padding: $padding-small 0 0 0;
-        align-self: center;
+        // align-self: center;
         margin-top: 1rem;
-        // background-color: var(--color-blue);
+        background-color: var(--color-green-kanban);
         color: var(--color-on-blue);
         padding-bottom: 1rem;
         .item-name {
